Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-101931

error C2220: the following warning is treated as an error: warning C4996: 'QByteArray::count': Use size() or length() instead.

XMLWordPrintable

    • 2d9eeed72084160c04d9d0dfe7a02528f3ed6e3d 27ca17707b (qt/tqtc-qtsensors/dev) 27ca17707b (qt/qtsensors/6.4) 27ca17707b (qt/tqtc-qtsensors/6.4) 27ca17707b (qt/qtsensors/6.4.0) 27ca17707b (qt/tqtc-qtsensors/6.4.0) 27ca17707b (qt/qtsensors/6.4.1)

      /Fosrc\linguist\lconvert\CMakeFiles\lconvert.dir\RelWithDebInfo\__\shared\xliff.cpp.obj /Fdsrc\linguist\lconvert\CMakeFiles\lconvert.dir\RelWithDebInfo\ /FS -c \Users\qt\work\qt\qttools\src\linguist\shared\xliff.cpp
      agent:2022/03/21 06:05:52 build.go:394: \Users\qt\work\qt\qttools\src\linguist\shared\xliff.cpp(68): error C2220: the following warning is treated as an error
      agent:2022/03/21 06:05:52 build.go:394: \Users\qt\work\qt\qttools\src\linguist\shared\xliff.cpp(68): warning C4996: 'QByteArray::count': Use size() or length() instead.
      

      Build log: https://testresults.qt.io/logs/qt/qttools/8c8fd9d29bb5c7a45065376f6471225990b6e6ca/WindowsWindows_11_21H2x86_64WindowsWindows_11_21H2x86_64MSVC2019qtci-windows-11_21H2-x86_64-51-a6aec5DebugAndRelease_Sccache_WarningsAreErrors/5dfb45ced42e875967a509c87d472d7b66c6d1e6/build_1647842823/log.txt.gz

      Details: https://testresults.qt.io/coin/integration/qt/qttools/tasks/1647842802

      Tested changes (refs/builds/qtci/dev/1647842553):

      https://codereview.qt-project.org/c/qt/qttools/+/401462/2 Update dependencies on 'dev' in qt/qttools

        For Gerrit Dashboard: QTBUG-101931
        # Subject Branch Project Status CR V

            sonakur Sona Kurazyan
            janihe Jani Heikkinen
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes