Fix QByteArray::count() deprecation warnings

Fixes: QTBUG-101931
Change-Id: I2e65f7c50e4b10110c2c1f1776b6e283a2eba04f
Reviewed-by: Mårten Nordheim <marten.nordheim@qt.io>